HW3/y.output
   0  $accept : program $end

   1  program : program_blocks

   2  program_blocks : program_blocks program_block
   3                 | program_block

   4  program_block : scalar_decl
   5                | array_decl
   6                | func_decl
   7                | func_def

   8  scalar_decl : TYPE idents SEMICOLON

   9  idents : ident
  10         | idents COMMA ident

  11  ident : ident_front ASSIGN assign_expr
  12        | ident_front

  13  ident_front : ID
  14              | MUL ID

  15  array_decl : TYPE arrs SEMICOLON

  16  arrs : arr
  17       | arrs COMMA arr

  18  arr : arr_def ASSIGN L_BRACE arr_content R_BRACE
  19      | arr_def

  20  arr_def : ID arr_dim

  21  arr_dim : L_BRACKET assign_expr R_BRACKET

  22  arr_content : L_BRACE arr_content R_BRACE
  23              | arr_content COMMA L_BRACE arr_content R_BRACE
  24              | arr_content COMMA assign_expr
  25              | assign_expr

  26  func_decl : TYPE ID L_PARENTHESE parameter COMMA parameter R_PARENTHESE SEMICOLON
  27            | TYPE ID L_PARENTHESE R_PARENTHESE SEMICOLON

  28  parameter : TYPE ID
  29            | TYPE MUL ID

  30  $$1 :

  31  func_def : TYPE ID L_PARENTHESE parameter COMMA parameter R_PARENTHESE $$1 compound_stmt

  32  $$2 :

  33  func_def : TYPE ID L_PARENTHESE R_PARENTHESE $$2 compound_stmt

  34  compound_stmt : L_BRACE stmts R_BRACE
  35                | L_BRACE R_BRACE

  36  stmts : stmts stmt
  37        | stmt

  38  stmt : if_else_stmt
  39       | while_stmt
  40       | for_stmt
  41       | return_stmt
  42       | break_stmt
  43       | compound_stmt
  44       | scalar_decl
  45       | array_decl
  46       | assign_expr SEMICOLON
  47       | digitalwrite_stmt
  48       | delay_stmt

  49  digitalwrite_stmt : DIGITALWRITE L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE SEMICOLON

  50  delay_stmt : DELAY L_PARENTHESE assign_expr R_PARENTHESE SEMICOLON

  51  if_else_stmt : if_stmt else_stmt

  52  $$3 :

  53  $$4 :

  54  if_stmt : IF L_PARENTHESE $$3 assign_expr R_PARENTHESE $$4 compound_stmt

  55  $$5 :

  56  else_stmt : ELSE $$5 compound_stmt
  57            |

  58  $$6 :

  59  $$7 :

  60  while_stmt : WHILE L_PARENTHESE $$6 assign_expr $$7 R_PARENTHESE compound_stmt

  61  $$8 :

  62  $$9 :

  63  while_stmt : DO $$8 compound_stmt WHILE L_PARENTHESE $$9 assign_expr R_PARENTHESE SEMICOLON

  64  $$10 :

  65  $$11 :

  66  $$12 :

  67  $$13 :

  68  for_stmt : FOR L_PARENTHESE $$10 for_cond $$11 for_cond $$12 for_last_cond $$13 compound_stmt

  69  for_cond : assign_expr SEMICOLON
  70           | SEMICOLON

  71  for_last_cond : assign_expr R_PARENTHESE
  72                | R_PARENTHESE

  73  return_stmt : RETURN assign_expr SEMICOLON

  74  break_stmt : BREAK SEMICOLON

  75  assign_expr : equal_expr ASSIGN assign_expr
  76              | equal_expr

  77  equal_expr : equal_expr EQUAL comp_expr
  78             | equal_expr NOT_EQUAL comp_expr
  79             | comp_expr

  80  comp_expr : comp_expr LESS add_sub_expr
  81            | comp_expr GREATER add_sub_expr
  82            | comp_expr LESS_EQUAL add_sub_expr
  83            | comp_expr GREATER_EQUAL add_sub_expr
  84            | add_sub_expr

  85  add_sub_expr : add_sub_expr PLUS mul_div_rem_expr
  86               | add_sub_expr MINUS mul_div_rem_expr
  87               | mul_div_rem_expr

  88  mul_div_rem_expr : mul_div_rem_expr MUL pre_expr
  89                   | mul_div_rem_expr DIV pre_expr
  90                   | pre_expr

  91  pre_expr : INCREMENT pre_expr
  92           | DECREMENT pre_expr
  93           | PLUS pre_expr
  94           | MINUS pre_expr
  95           | NOT pre_expr
  96           | NOT_OP pre_expr
  97           | L_PARENTHESE TYPE R_PARENTHESE pre_expr
  98           | L_PARENTHESE TYPE MUL R_PARENTHESE pre_expr
  99           | MUL pre_expr
 100           | AND_OP pre_expr
 101           | post_expr

 102  post_expr : post_expr INCREMENT
 103            | post_expr DECREMENT
 104            | post_expr L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE
 105            | UKADD L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE
 106            | CMPEQ L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE
 107            | UCMPLT L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE
 108            | UKSUB L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE
 109            | end_expr

 110  end_expr : ID arr_expr
 111           | ID
 112           | NUM
 113           | CHAR
 114           | STRING
 115           | FLOAT
 116           | L_PARENTHESE assign_expr R_PARENTHESE

 117  arr_expr : L_BRACKET assign_expr R_BRACKET

state 0
	$accept : . program $end  (0)

	TYPE  shift 1
	.  error

	program  goto 2
	program_blocks  goto 3
	program_block  goto 4
	scalar_decl  goto 5
	array_decl  goto 6
	func_decl  goto 7
	func_def  goto 8


state 1
	scalar_decl : TYPE . idents SEMICOLON  (8)
	array_decl : TYPE . arrs SEMICOLON  (15)
	func_decl : TYPE . ID L_PARENTHESE parameter COMMA parameter R_PARENTHESE SEMICOLON  (26)
	func_decl : TYPE . ID L_PARENTHESE R_PARENTHESE SEMICOLON  (27)
	func_def : TYPE . ID L_PARENTHESE parameter COMMA parameter R_PARENTHESE $$1 compound_stmt  (31)
	func_def : TYPE . ID L_PARENTHESE R_PARENTHESE $$2 compound_stmt  (33)

	ID  shift 9
	MUL  shift 10
	.  error

	ident  goto 11
	ident_front  goto 12
	idents  goto 13
	arrs  goto 14
	arr  goto 15
	arr_def  goto 16


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : program_blocks .  (1)
	program_blocks : program_blocks . program_block  (2)

	TYPE  shift 1
	$end  reduce 1

	program_block  goto 17
	scalar_decl  goto 5
	array_decl  goto 6
	func_decl  goto 7
	func_def  goto 8


state 4
	program_blocks : program_block .  (3)

	.  reduce 3


state 5
	program_block : scalar_decl .  (4)

	.  reduce 4


state 6
	program_block : array_decl .  (5)

	.  reduce 5


state 7
	program_block : func_decl .  (6)

	.  reduce 6


state 8
	program_block : func_def .  (7)

	.  reduce 7


state 9
	ident_front : ID .  (13)
	arr_def : ID . arr_dim  (20)
	func_decl : TYPE ID . L_PARENTHESE parameter COMMA parameter R_PARENTHESE SEMICOLON  (26)
	func_decl : TYPE ID . L_PARENTHESE R_PARENTHESE SEMICOLON  (27)
	func_def : TYPE ID . L_PARENTHESE parameter COMMA parameter R_PARENTHESE $$1 compound_stmt  (31)
	func_def : TYPE ID . L_PARENTHESE R_PARENTHESE $$2 compound_stmt  (33)

	L_BRACKET  shift 18
	L_PARENTHESE  shift 19
	COMMA  reduce 13
	SEMICOLON  reduce 13
	ASSIGN  reduce 13

	arr_dim  goto 20


state 10
	ident_front : MUL . ID  (14)

	ID  shift 21
	.  error


state 11
	idents : ident .  (9)

	.  reduce 9


state 12
	ident : ident_front . ASSIGN assign_expr  (11)
	ident : ident_front .  (12)

	ASSIGN  shift 22
	COMMA  reduce 12
	SEMICOLON  reduce 12


state 13
	scalar_decl : TYPE idents . SEMICOLON  (8)
	idents : idents . COMMA ident  (10)

	COMMA  shift 23
	SEMICOLON  shift 24
	.  error


state 14
	array_decl : TYPE arrs . SEMICOLON  (15)
	arrs : arrs . COMMA arr  (17)

	COMMA  shift 25
	SEMICOLON  shift 26
	.  error


state 15
	arrs : arr .  (16)

	.  reduce 16


state 16
	arr : arr_def . ASSIGN L_BRACE arr_content R_BRACE  (18)
	arr : arr_def .  (19)

	ASSIGN  shift 27
	COMMA  reduce 19
	SEMICOLON  reduce 19


state 17
	program_blocks : program_blocks program_block .  (2)

	.  reduce 2


state 18
	arr_dim : L_BRACKET . assign_expr R_BRACKET  (21)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 46
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 19
	func_decl : TYPE ID L_PARENTHESE . parameter COMMA parameter R_PARENTHESE SEMICOLON  (26)
	func_decl : TYPE ID L_PARENTHESE . R_PARENTHESE SEMICOLON  (27)
	func_def : TYPE ID L_PARENTHESE . parameter COMMA parameter R_PARENTHESE $$1 compound_stmt  (31)
	func_def : TYPE ID L_PARENTHESE . R_PARENTHESE $$2 compound_stmt  (33)

	TYPE  shift 54
	R_PARENTHESE  shift 55
	.  error

	parameter  goto 56


state 20
	arr_def : ID arr_dim .  (20)

	.  reduce 20


state 21
	ident_front : MUL ID .  (14)

	.  reduce 14


state 22
	ident : ident_front ASSIGN . assign_expr  (11)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 57
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 23
	idents : idents COMMA . ident  (10)

	ID  shift 58
	MUL  shift 10
	.  error

	ident  goto 59
	ident_front  goto 12


state 24
	scalar_decl : TYPE idents SEMICOLON .  (8)

	.  reduce 8


state 25
	arrs : arrs COMMA . arr  (17)

	ID  shift 60
	.  error

	arr  goto 61
	arr_def  goto 16


state 26
	array_decl : TYPE arrs SEMICOLON .  (15)

	.  reduce 15


state 27
	arr : arr_def ASSIGN . L_BRACE arr_content R_BRACE  (18)

	L_BRACE  shift 62
	.  error


state 28
	end_expr : NUM .  (112)

	.  reduce 112


state 29
	end_expr : FLOAT .  (115)

	.  reduce 115


state 30
	end_expr : CHAR .  (113)

	.  reduce 113


state 31
	end_expr : STRING .  (114)

	.  reduce 114


state 32
	end_expr : ID . arr_expr  (110)
	end_expr : ID .  (111)

	L_BRACKET  shift 63
	COMMA  reduce 111
	SEMICOLON  reduce 111
	ASSIGN  reduce 111
	R_BRACKET  reduce 111
	R_BRACE  reduce 111
	R_PARENTHESE  reduce 111
	L_PARENTHESE  reduce 111
	EQUAL  reduce 111
	NOT_EQUAL  reduce 111
	LESS  reduce 111
	GREATER  reduce 111
	LESS_EQUAL  reduce 111
	GREATER_EQUAL  reduce 111
	PLUS  reduce 111
	MINUS  reduce 111
	MUL  reduce 111
	DIV  reduce 111
	INCREMENT  reduce 111
	DECREMENT  reduce 111

	arr_expr  goto 64


state 33
	post_expr : UKADD . L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE  (105)

	L_PARENTHESE  shift 65
	.  error


state 34
	post_expr : CMPEQ . L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE  (106)

	L_PARENTHESE  shift 66
	.  error


state 35
	post_expr : UCMPLT . L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE  (107)

	L_PARENTHESE  shift 67
	.  error


state 36
	post_expr : UKSUB . L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE  (108)

	L_PARENTHESE  shift 68
	.  error


state 37
	pre_expr : L_PARENTHESE . TYPE R_PARENTHESE pre_expr  (97)
	pre_expr : L_PARENTHESE . TYPE MUL R_PARENTHESE pre_expr  (98)
	end_expr : L_PARENTHESE . assign_expr R_PARENTHESE  (116)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	TYPE  shift 69
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 70
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 38
	pre_expr : AND_OP . pre_expr  (100)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 71
	post_expr  goto 52
	end_expr  goto 53


state 39
	pre_expr : PLUS . pre_expr  (93)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 72
	post_expr  goto 52
	end_expr  goto 53


state 40
	pre_expr : MINUS . pre_expr  (94)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 73
	post_expr  goto 52
	end_expr  goto 53


state 41
	pre_expr : MUL . pre_expr  (99)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 74
	post_expr  goto 52
	end_expr  goto 53


state 42
	pre_expr : INCREMENT . pre_expr  (91)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 75
	post_expr  goto 52
	end_expr  goto 53


state 43
	pre_expr : DECREMENT . pre_expr  (92)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 76
	post_expr  goto 52
	end_expr  goto 53


state 44
	pre_expr : NOT . pre_expr  (95)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 77
	post_expr  goto 52
	end_expr  goto 53


state 45
	pre_expr : NOT_OP . pre_expr  (96)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	pre_expr  goto 78
	post_expr  goto 52
	end_expr  goto 53


state 46
	arr_dim : L_BRACKET assign_expr . R_BRACKET  (21)

	R_BRACKET  shift 79
	.  error


state 47
	assign_expr : equal_expr . ASSIGN assign_expr  (75)
	assign_expr : equal_expr .  (76)
	equal_expr : equal_expr . EQUAL comp_expr  (77)
	equal_expr : equal_expr . NOT_EQUAL comp_expr  (78)

	ASSIGN  shift 80
	EQUAL  shift 81
	NOT_EQUAL  shift 82
	COMMA  reduce 76
	SEMICOLON  reduce 76
	R_BRACKET  reduce 76
	R_BRACE  reduce 76
	R_PARENTHESE  reduce 76


state 48
	equal_expr : comp_expr .  (79)
	comp_expr : comp_expr . LESS add_sub_expr  (80)
	comp_expr : comp_expr . GREATER add_sub_expr  (81)
	comp_expr : comp_expr . LESS_EQUAL add_sub_expr  (82)
	comp_expr : comp_expr . GREATER_EQUAL add_sub_expr  (83)

	LESS  shift 83
	GREATER  shift 84
	LESS_EQUAL  shift 85
	GREATER_EQUAL  shift 86
	COMMA  reduce 79
	SEMICOLON  reduce 79
	ASSIGN  reduce 79
	R_BRACKET  reduce 79
	R_BRACE  reduce 79
	R_PARENTHESE  reduce 79
	EQUAL  reduce 79
	NOT_EQUAL  reduce 79


state 49
	comp_expr : add_sub_expr .  (84)
	add_sub_expr : add_sub_expr . PLUS mul_div_rem_expr  (85)
	add_sub_expr : add_sub_expr . MINUS mul_div_rem_expr  (86)

	PLUS  shift 87
	MINUS  shift 88
	COMMA  reduce 84
	SEMICOLON  reduce 84
	ASSIGN  reduce 84
	R_BRACKET  reduce 84
	R_BRACE  reduce 84
	R_PARENTHESE  reduce 84
	EQUAL  reduce 84
	NOT_EQUAL  reduce 84
	LESS  reduce 84
	GREATER  reduce 84
	LESS_EQUAL  reduce 84
	GREATER_EQUAL  reduce 84


state 50
	add_sub_expr : mul_div_rem_expr .  (87)
	mul_div_rem_expr : mul_div_rem_expr . MUL pre_expr  (88)
	mul_div_rem_expr : mul_div_rem_expr . DIV pre_expr  (89)

	MUL  shift 89
	DIV  shift 90
	COMMA  reduce 87
	SEMICOLON  reduce 87
	ASSIGN  reduce 87
	R_BRACKET  reduce 87
	R_BRACE  reduce 87
	R_PARENTHESE  reduce 87
	EQUAL  reduce 87
	NOT_EQUAL  reduce 87
	LESS  reduce 87
	GREATER  reduce 87
	LESS_EQUAL  reduce 87
	GREATER_EQUAL  reduce 87
	PLUS  reduce 87
	MINUS  reduce 87


state 51
	mul_div_rem_expr : pre_expr .  (90)

	.  reduce 90


state 52
	pre_expr : post_expr .  (101)
	post_expr : post_expr . INCREMENT  (102)
	post_expr : post_expr . DECREMENT  (103)
	post_expr : post_expr . L_PARENTHESE assign_expr COMMA assign_expr R_PARENTHESE  (104)

	L_PARENTHESE  shift 91
	INCREMENT  shift 92
	DECREMENT  shift 93
	COMMA  reduce 101
	SEMICOLON  reduce 101
	ASSIGN  reduce 101
	R_BRACKET  reduce 101
	R_BRACE  reduce 101
	R_PARENTHESE  reduce 101
	EQUAL  reduce 101
	NOT_EQUAL  reduce 101
	LESS  reduce 101
	GREATER  reduce 101
	LESS_EQUAL  reduce 101
	GREATER_EQUAL  reduce 101
	PLUS  reduce 101
	MINUS  reduce 101
	MUL  reduce 101
	DIV  reduce 101


state 53
	post_expr : end_expr .  (109)

	.  reduce 109


state 54
	parameter : TYPE . ID  (28)
	parameter : TYPE . MUL ID  (29)

	ID  shift 94
	MUL  shift 95
	.  error


state 55
	func_decl : TYPE ID L_PARENTHESE R_PARENTHESE . SEMICOLON  (27)
	func_def : TYPE ID L_PARENTHESE R_PARENTHESE . $$2 compound_stmt  (33)
	$$2 : .  (32)

	SEMICOLON  shift 96
	L_BRACE  reduce 32

	$$2  goto 97


state 56
	func_decl : TYPE ID L_PARENTHESE parameter . COMMA parameter R_PARENTHESE SEMICOLON  (26)
	func_def : TYPE ID L_PARENTHESE parameter . COMMA parameter R_PARENTHESE $$1 compound_stmt  (31)

	COMMA  shift 98
	.  error


state 57
	ident : ident_front ASSIGN assign_expr .  (11)

	.  reduce 11


state 58
	ident_front : ID .  (13)

	.  reduce 13


state 59
	idents : idents COMMA ident .  (10)

	.  reduce 10


state 60
	arr_def : ID . arr_dim  (20)

	L_BRACKET  shift 18
	.  error

	arr_dim  goto 20


state 61
	arrs : arrs COMMA arr .  (17)

	.  reduce 17


state 62
	arr : arr_def ASSIGN L_BRACE . arr_content R_BRACE  (18)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_BRACE  shift 99
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 100
	arr_content  goto 101
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 63
	arr_expr : L_BRACKET . assign_expr R_BRACKET  (117)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 102
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 64
	end_expr : ID arr_expr .  (110)

	.  reduce 110


state 65
	post_expr : UKADD L_PARENTHESE . assign_expr COMMA assign_expr R_PARENTHESE  (105)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 103
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 66
	post_expr : CMPEQ L_PARENTHESE . assign_expr COMMA assign_expr R_PARENTHESE  (106)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 104
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 67
	post_expr : UCMPLT L_PARENTHESE . assign_expr COMMA assign_expr R_PARENTHESE  (107)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 105
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 68
	post_expr : UKSUB L_PARENTHESE . assign_expr COMMA assign_expr R_PARENTHESE  (108)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 106
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 69
	pre_expr : L_PARENTHESE TYPE . R_PARENTHESE pre_expr  (97)
	pre_expr : L_PARENTHESE TYPE . MUL R_PARENTHESE pre_expr  (98)

	R_PARENTHESE  shift 107
	MUL  shift 108
	.  error


state 70
	end_expr : L_PARENTHESE assign_expr . R_PARENTHESE  (116)

	R_PARENTHESE  shift 109
	.  error


state 71
	pre_expr : AND_OP pre_expr .  (100)

	.  reduce 100


state 72
	pre_expr : PLUS pre_expr .  (93)

	.  reduce 93


state 73
	pre_expr : MINUS pre_expr .  (94)

	.  reduce 94


state 74
	pre_expr : MUL pre_expr .  (99)

	.  reduce 99


state 75
	pre_expr : INCREMENT pre_expr .  (91)

	.  reduce 91


state 76
	pre_expr : DECREMENT pre_expr .  (92)

	.  reduce 92


state 77
	pre_expr : NOT pre_expr .  (95)

	.  reduce 95


state 78
	pre_expr : NOT_OP pre_expr .  (96)

	.  reduce 96


state 79
	arr_dim : L_BRACKET assign_expr R_BRACKET .  (21)

	.  reduce 21


state 80
	assign_expr : equal_expr ASSIGN . assign_expr  (75)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	assign_expr  goto 110
	equal_expr  goto 47
	comp_expr  goto 48
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 81
	equal_expr : equal_expr EQUAL . comp_expr  (77)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	comp_expr  goto 111
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53


state 82
	equal_expr : equal_expr NOT_EQUAL . comp_expr  (78)

	NUM  shift 28
	FLOAT  shift 29
	CHAR  shift 30
	STRING  shift 31
	ID  shift 32
	UKADD  shift 33
	CMPEQ  shift 34
	UCMPLT  shift 35
	UKSUB  shift 36
	L_PARENTHESE  shift 37
	AND_OP  shift 38
	PLUS  shift 39
	MINUS  shift 40
	MUL  shift 41
	INCREMENT  shift 42
	DECREMENT  shift 43
	NOT  shift 44
	NOT_OP  shift 45
	.  error

	comp_expr  goto 112
	add_sub_expr  goto 49
	mul_div_rem_expr  goto 50
	pre_expr  goto 51
	post_expr  goto 52
	end_expr  goto 53

